// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPickerRow should be rendered correctly 1`] = `
<div
  aria-checked={null}
  aria-posinset={2}
  aria-selected={null}
  className="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
  role="option"
>
  <div
    className="flexCell rowContent"
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": undefined,
      }
    }
  >
    <div
      className="contentWrapper"
    >
      <div
        className="root uui-flex-row content uui-size-36"
        style={Object {}}
      >
        <div />
        <div
          className="flexSpacer"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DataPickerRow should be rendered correctly 2`] = `
<div
  aria-checked={null}
  aria-posinset={2}
  aria-selected={true}
  className="pickerRow uui-picker_input-row uui-size-48 align-widgets-top uui-focus -clickable"
  onClick={[Function]}
  role="option"
  style={
    Object {
      "--uui-data_picker-horizontal-padding": "24px",
    }
  }
>
  <div
    className="flexCell rowContent"
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": undefined,
      }
    }
  >
    <div
      className="contentWrapper"
    >
      <div
        className="root uui-flex-row content uui-size-36"
        style={Object {}}
      >
        <div />
        <div
          className="flexSpacer"
        />
        <div
          className="iconWrapper uui-picker_input-row-select_icon uui-selected"
        >
          <div
            aria-label="Selected"
            className="container uui-icon uui-enabled selectedMark"
            style={Object {}}
          >
            <svg
              className=""
              height="24"
              width="24"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
